--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
-    <title>Example</title>
+    <title>Tweet2Cite</title>
 
     <!--[if gt IE 8]><!-->
       <link rel="stylesheet" href="css/application.css" />
